--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,44 @@
+cache:
+- cargo
+
 jobs:
   allow_failures:
     - rust: nightly
   include:
-    - if: env(TRAVIS_BRANCH) = master or branch =~ /^main\/.+$/
+    - if: branch = master or head_branch =~ /^release\/.+$/
       os: osx
       osx_image: xcode10.1
       language: generic
       env:
         - TOXENV=py27
         - PYTHON_TESTS=true
-    - if: env(TRAVIS_BRANCH) = master or branch =~ /^main\/.+$/
+    - if: branch = master or head_branch =~ /^release\/.+$/
       os: osx
       osx_image: xcode9.3
       language: generic
       env:
         - TOXENV=py36
         - PYTHON_TESTS=true
-    - if: env(TRAVIS_BRANCH) = master or branch =~ /^main\/.+$/
+    - if: branch = master or head_branch =~ /^release\/.+$/
       os: osx
       osx_image: xcode9.3
       language: generic
       env:
       - TOXENV=py37
       - PYTHON_TESTS=true
-    - if: env(TRAVIS_BRANCH) = master or branch =~ /^main\/.+$/
+    - if: branch = master or head_branch =~ /^release\/.+$/
       os: osx
       osx_image: xcode9.3
       language: generic
       env:
         - MACOS_SWIFT_TESTS=true
-    - if: env(TRAVIS_BRANCH) = master or branch =~ /^main\/.+$/
+    - if: branch = master or head_branch =~ /^release\/.+$/
       os: osx
       osx_image: xcode10.1
       language: generic
       env:
         - IOS_SWIFT_TESTS=true
-    - if: env(TRAVIS_BRANCH) = master or branch =~ /^main\/.+$/
+    - if: branch = master or head_branch =~ /^release\/.+$/
       os: linux
       language: python
       python: 2.7
@@ -48,7 +51,7 @@ jobs:
       env:
         - TOXENV=py36
         - PYTHON_TESTS=true
-    - if: env(TRAVIS_BRANCH) = master or branch =~ /^main\/.+$/
+    - if: branch = master or head_branch =~ /^release\/.+$/
       os: linux
       language: python
       python: 3.7
@@ -58,7 +61,7 @@ jobs:
       env:
       - TOXENV=py37
       - PYTHON_TESTS=true
-    - if: env(TRAVIS_BRANCH) = master or branch =~ /^main\/.+$/
+    - if: branch = master or head_branch =~ /^release\/.+$/
       os: linux
       language: rust
       rust: stable
@@ -69,13 +72,13 @@ jobs:
       rust: stable
       env:
         - RUST_TESTS=true
-    - if: env(TRAVIS_BRANCH) = master or branch =~ /^main\/.+$/
+    - if: branch = master or head_branch =~ /^release\/.+$/
       os: linux
       language: rust
       rust: beta
       env:
         - RUST_TESTS=true
-    - if: env(TRAVIS_BRANCH) = master or branch =~ /^main\/.+$/
+    - if: branch = master or head_branch =~ /^release\/.+$/
       os: linux
       language: rust
       rust: nightly
