Fix issues with cargo dependencies

--- a/snips-nlu-ffi/python/snips-nlu-python-ffi/Cargo.toml
+++ b/snips-nlu-ffi/python/snips-nlu-python-ffi/Cargo.toml
@@ -11,4 +11,4 @@ crate-type = ["cdylib"]
 [dependencies]
 libc = "0.2"
 ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "b1f4af3" }
-snips-nlu-ffi = { git = "https://github.com/snipsco/snips-nlu-rs", branch = "develop" }
+snips-nlu-ffi = { path = "../.." }
