--- a/snips-nlu-ffi/Cargo.toml
+++ b/snips-nlu-ffi/Cargo.toml
@@ -12,7 +12,7 @@ authors = [
 [dependencies]
 ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "b1f4af3" }
 snips-nlu-lib = { path = "../snips-nlu-lib" }
-snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", branch = "develop" }
+snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", rev = "5fee809" }
 failure = "0.1"
 lazy_static = "1.0"
 libc = "0.2"
