--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 cache:
 - cargo
+- directories:
+  - platforms/python/ffi/target
 
 jobs:
-  allow_failures:
-    - rust: nightly
   include:
     - if: branch = master or head_branch =~ /^release\/.+$/
       os: osx
@@ -14,29 +14,17 @@ jobs:
         - PYTHON_TESTS=true
     - if: branch = master or head_branch =~ /^release\/.+$/
       os: osx
-      osx_image: xcode9.3
+      osx_image: xcode10.1
       language: generic
       env:
         - TOXENV=py36
         - PYTHON_TESTS=true
     - if: branch = master or head_branch =~ /^release\/.+$/
       os: osx
-      osx_image: xcode9.3
-      language: generic
-      env:
-      - TOXENV=py37
-      - PYTHON_TESTS=true
-    - if: branch = master or head_branch =~ /^release\/.+$/
-      os: osx
-      osx_image: xcode9.3
-      language: generic
-      env:
-        - MACOS_SWIFT_TESTS=true
-    - if: branch = master or head_branch =~ /^release\/.+$/
-      os: osx
       osx_image: xcode10.1
       language: generic
       env:
+        - MACOS_SWIFT_TESTS=true
         - IOS_SWIFT_TESTS=true
     - if: branch = master or head_branch =~ /^release\/.+$/
       os: linux
@@ -53,16 +41,6 @@ jobs:
         - PYTHON_TESTS=true
     - if: branch = master or head_branch =~ /^release\/.+$/
       os: linux
-      language: python
-      python: 3.7
-      # cf https://github.com/travis-ci/travis-ci/issues/9815
-      dist: xenial
-      sudo: true
-      env:
-      - TOXENV=py37
-      - PYTHON_TESTS=true
-    - if: branch = master or head_branch =~ /^release\/.+$/
-      os: linux
       language: rust
       rust: stable
       env:
@@ -70,18 +48,6 @@ jobs:
     - os: linux
       language: rust
       rust: stable
-      env:
-        - RUST_TESTS=true
-    - if: branch = master or head_branch =~ /^release\/.+$/
-      os: linux
-      language: rust
-      rust: beta
-      env:
-        - RUST_TESTS=true
-    - if: branch = master or head_branch =~ /^release\/.+$/
-      os: linux
-      language: rust
-      rust: nightly
       env:
         - RUST_TESTS=true
 
