Set version to 0.64.0-SNAPSHOT

--- a/platforms/python/ffi/Cargo.toml
+++ b/platforms/python/ffi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snips-nlu-python-ffi"
-version = "0.63.0"
+version = "0.64.0-SNAPSHOT"
 authors = ["Adrien Ball <adrien.ball@snips.ai>"]
 edition = "2018"
 
@@ -11,4 +11,4 @@ crate-type = ["cdylib"]
 [dependencies]
 libc = "0.2"
 ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "4292ad9" }
-snips-nlu-ffi = { git = "https://github.com/snipsco/snips-nlu-rs", tag = "0.63.0" }
+snips-nlu-ffi = { path = "../../../ffi" }
