--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ tempfile = "3"
 ndarray = "0.12"
 regex = "1.0"
 csv = "1.0"
-zip = { version = "0.3", features=["deflate"] }
+zip = { version = "0.5", default-features = false, features = ["deflate"] }
 
 [dev-dependencies]
 bencher = { git = "https://github.com/snipsco/bencher", rev = "63910ace" }
