--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ zip = { version = "0.5", default-features = false, features = ["deflate"] }
 bencher = { git = "https://github.com/snipsco/bencher", rev = "63910ace" }
 clap = "2.32"
 dinghy-test = "0.4"
+env_logger = "0.6"
 maplit = "1.0"
 fs_extra = "1.1"
 
