--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snips-nlu-ffi"
-version = "0.64.2"
+version = "0.65.0-SNAPSHOT"
 edition = "2018"
 authors = [
     "Adrien Ball <adrien.ball@snips.ai>",
