--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,3 @@
-cache:
-- cargo
-- directories:
-  - platforms/python/ffi/target
-
 jobs:
   include:
     - if: branch = master or head_branch =~ /^release\/.+$/
@@ -44,8 +39,8 @@ jobs:
         - PYTHON_TESTS=true
     - if: branch = master or head_branch =~ /^release\/.+$/
       os: linux
-      language: rust
-      rust: stable
+      language: java
+      jdk: openjdk8
       env:
         - KOTLIN_TESTS=true
     - os: linux
@@ -59,6 +54,3 @@ before_install: . ./.travis/before_install.sh
 install: ./.travis/install.sh
 
 script: ./.travis/test.sh
-
-git:
-  depth: 10
