--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,11 +4,10 @@ environment:
 
 branches:
   only:
-  - develop
-  - master
+  - /main\/.*/
+  - /release\/.*/
 
 install:
-  - if "%APPVEYOR_REPO_BRANCH%" == "develop" if NOT "%APPVEYOR_PULL_REQUEST_HEAD_REPO_BRANCH:~0,5%" == "main/" appveyor exit
   - appveyor-retry appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
   - rustup-init.exe -y --default-host %TARGET%
   - set PATH=%PATH%;C:\Users\appveyor\.cargo\bin
@@ -22,8 +21,3 @@ build: false
 test_script:
   - cargo build --all --tests --benches
   - cargo test --all
-
-cache:
-- target
-- platforms\python\ffi\target
-- C:\Users\appveyor\.cargo\registry
