--- a/platforms/kotlin/build.gradle
+++ b/platforms/kotlin/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.10'
+    ext.kotlin_version = '1.3.11'
     repositories {
         jcenter()
     }
@@ -30,7 +30,7 @@ configurations {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     compile 'net.java.dev.jna:jna:4.5.0'
     compile "ai.snips:snips-nlu-ontology:0.65.0"
     testCompile 'junit:junit:4.12'
