--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ ndarray = "0.12"
 regex = "1.0"
 csv = "1.0"
 zip = { version = "0.5", default-features = false, features = ["deflate"] }
+chrono = "=0.4.8"
 
 [dev-dependencies]
 bencher = { git = "https://github.com/snipsco/bencher", rev = "63910ace" }
