--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,7 @@ base64 = "0.10"
 itertools = { version = "0.8", default-features = false }
 log = "0.4"
 lru-cache = "0.1"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tempfile = "3"
 ndarray = "0.12"
