--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snips-nlu-lib"
-version = "0.66.0-SNAPSHOT"
+version = "0.65.2"
 authors = [
     "Adrien Ball <adrien.ball@snips.ai>",
     "Clement Doumouro <clement.doumouro@snips.ai>",
@@ -27,14 +27,14 @@ base64 = "0.10"
 itertools = { version = "0.8", default-features = false }
 log = "0.4"
 lru-cache = "0.1"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tempfile = "3"
 ndarray = "0.12"
 regex = "1.0"
 csv = "1.0"
 zip = { version = "0.5", default-features = false, features = ["deflate"] }
+chrono = "=0.4.8"
 
 [dev-dependencies]
 bencher = { git = "https://github.com/snipsco/bencher", rev = "63910ace" }
